--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: AwesomeJT
+title: Celia Wang
 logo: /assets/images/logo.avif
-baseurl: /awesome-jekyll-theme
+baseurl: /W5-a11y/celia_portfolio.git
 
 ##
 # Collections configuration
@@ -8,6 +8,7 @@ baseurl: /awesome-jekyll-theme
 collections:
   projects:
     output: true
+    permalink: /:collection/:name/
 
 ##
 # Contact Channels configuration
@@ -18,14 +19,9 @@ collections:
 ##
 contact_channels_section: true
 contact_channels:
-  # email: "example@example.cl"
-  github: "https://github.com/a-chacon"
-  # telegram: "https://t.me/"
-  # stackoverflow: "https://stackoverflow.com"
-  # discord: "https://discord.com/"
-  # mastodon: "https://lile.cl/"
-  # threads: "https://www.threads.net/@example"
-  # linkedin: "https://www.linkedin.com/in/example/"
+  email: "celia_wang@berkeley.edu"
+  github: "https://github.com/W5-a11y"
+  linkedin: "https://www.linkedin.com/in/celiawang19/"
 
 ##
 # Plugins configuration
@@ -38,7 +34,7 @@ plugins:
 ##
 # Polyglot configuration
 ##
-languages: ["en"]
+languages: ["en", "zh"]
 default_lang: "en"
 exclude_from_localization: ["javascript", "images", "css", "public"]
 parallel_localization: true
